Opened 18 years ago

Closed 18 years ago

Last modified 17 years ago

#860 closed bug (fixed)

missing symbol: inet_addr

Reported by: darkwyrm Owned by: axeld
Priority: normal Milestone:
Component: - General Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Firefox is currently won't start because inet_addr() is missing from libnetwork. Yeah, I know networking is mostly broken, but even a sort-of fix would of great help for WalterCon 2006.

Change History (4)

comment:1 by korli, 18 years ago

These inet* symbols should be exported by libnet.so. Did you try a Bone build ? If we expect to link libnetwork.so to libnet.so, we should have these symbols weakly exported too.

comment:2 by korli, 18 years ago

Should be fixed in revision 18891.

comment:3 by wkornewald, 18 years ago

Milestone: Network Stack R1
Version: R1 development

comment:4 by axeld, 18 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.