added weak symbols for inet_addr and inet_ntoa, normally exported by libnet.so should be enough for bug #860, feel free to drop them if a libnet.so is created

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18891 a95241bf-73f2-0310-859d-f6bbb57e9c96